@@ -15,6 +15,8 @@
   * Added a better random bytes generator using apr_generate_random_bytes() to create
     the HMAC key.
 
+  * Fixed byte conversion issue during logging under Linux s390x platform.
+
   * Fixed compilation bug with LibXML2 2.9.0 (Thanks Athmane Madjoudj).
 
   * Fixed parsing error with modsecurity-recommended.conf and Apache 2.4.
